# qml-todolist

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ToDoList.qml  main.cpp  main.qml  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h  uncrustify.cfg
.github/workflows/: build.yml  test-code-quality.yml
src/: ToDoList.qml  main.cpp  main.qml  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h
